--- a/ASRoam/ASRoam/Class/Find/Controller/Find.storyboard
+++ b/ASRoam/ASRoam/Class/Find/Controller/Find.storyboard
@@ -1,55 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Brd-HK-dTM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Brd-HK-dTM">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Live Controller-->
+        <!--Find Controller-->
         <scene sceneID="LVj-F4-BiJ">
             <objects>
-                <viewController id="5Lx-XG-PPV" customClass="LiveController" customModule="ASRoam" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="5Lx-XG-PPV" customClass="FindController" customModule="ASRoam" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pt8-tB-r1z"/>
                         <viewControllerLayoutGuide type="bottom" id="YBV-8k-cWt"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="gj5-id-OhM">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NRw-Mh-cyq">
-                                <rect key="frame" x="144" y="318.5" width="86" height="30"/>
-                                <state key="normal" title="clickToJump"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KeU-ue-oHu">
+                                <rect key="frame" x="0.0" y="-64" width="375" height="64"/>
+                                <color key="backgroundColor" red="0.30960356173186815" green="0.75686274509999996" blue="0.65632044641366316" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="CkE-32-Hvf"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" layoutMarginsFollowReadableWidth="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cKk-dn-sIa">
+                                <rect key="frame" x="20" y="-44" width="33" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Sz8-vt-tCg"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <state key="normal" title="返回">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
                                 <connections>
-                                    <action selector="jumpAction:" destination="5Lx-XG-PPV" eventType="touchUpInside" id="bJS-5q-NYn"/>
-                                    <segue destination="UcF-sZ-fIF" kind="show" identifier="777" id="DlL-A9-86Q"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DiP-yx-8m2">
-                                <rect key="frame" x="164.5" y="445" width="46" height="30"/>
-                                <state key="normal" title="Button"/>
-                                <connections>
-                                    <action selector="presentAction:" destination="5Lx-XG-PPV" eventType="touchUpInside" id="ndX-z1-BkU"/>
-                                    <segue destination="aPX-oI-bfK" kind="popoverPresentation" identifier="666" popoverAnchorView="DiP-yx-8m2" id="T5p-8r-xta">
-                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
-                                    </segue>
+                                    <action selector="backAction:" destination="5Lx-XG-PPV" eventType="touchUpInside" id="agU-Ex-tl3"/>
                                 </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="NRw-Mh-cyq" firstAttribute="centerY" secondItem="gj5-id-OhM" secondAttribute="centerY" id="9tx-Iw-S6c"/>
-                            <constraint firstItem="NRw-Mh-cyq" firstAttribute="centerX" secondItem="gj5-id-OhM" secondAttribute="centerX" id="P2B-sv-fdQ"/>
-                            <constraint firstItem="DiP-yx-8m2" firstAttribute="centerX" secondItem="gj5-id-OhM" secondAttribute="centerX" id="Qpp-oz-Ufe"/>
-                            <constraint firstItem="DiP-yx-8m2" firstAttribute="top" secondItem="NRw-Mh-cyq" secondAttribute="bottom" constant="96.5" id="YZE-dn-zUM"/>
+                            <constraint firstItem="cKk-dn-sIa" firstAttribute="leading" secondItem="KeU-ue-oHu" secondAttribute="leading" constant="20" id="0Dq-B0-qte"/>
+                            <constraint firstItem="cKk-dn-sIa" firstAttribute="top" secondItem="KeU-ue-oHu" secondAttribute="top" constant="20" id="7Rl-eM-1IV"/>
+                            <constraint firstItem="KeU-ue-oHu" firstAttribute="leading" secondItem="gj5-id-OhM" secondAttribute="leading" id="GBi-G6-1E0"/>
+                            <constraint firstItem="KeU-ue-oHu" firstAttribute="top" secondItem="gj5-id-OhM" secondAttribute="top" constant="-64" id="W7c-xk-8yS"/>
+                            <constraint firstAttribute="trailing" secondItem="KeU-ue-oHu" secondAttribute="trailing" id="XSh-Bx-bAT"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="IXx-L6-4r3"/>
+                    <navigationItem key="navigationItem" id="DsY-dh-vq1"/>
+                    <connections>
+                        <outlet property="backBtn" destination="cKk-dn-sIa" id="Wjb-bw-DzU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xxb-NE-mrY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -66,7 +72,7 @@
                     <view key="view" contentMode="scaleToFill" id="wiw-hx-WNl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="N2u-kU-B9M" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -86,17 +92,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F5t-wg-Li3">
-                                <rect key="frame" x="35" y="40" width="79" height="30"/>
-                                <state key="normal" title="backButton"/>
+                                <rect key="frame" x="35" y="20" width="42" height="30"/>
+                                <state key="normal" title="backu"/>
                                 <connections>
                                     <action selector="backAction:" destination="aPX-oI-bfK" eventType="touchUpInside" id="Pxw-or-XrV"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" red="0.25098040700000002" green="0.0" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.031141493055555556" green="0.024712456597222224" blue="0.114013671875" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="F5t-wg-Li3" firstAttribute="leading" secondItem="e2B-Br-PYo" secondAttribute="leadingMargin" constant="19" id="0Ex-M7-40D"/>
-                            <constraint firstItem="F5t-wg-Li3" firstAttribute="top" secondItem="iCf-at-za6" secondAttribute="bottom" constant="20" id="JSk-DR-jkG"/>
+                            <constraint firstItem="F5t-wg-Li3" firstAttribute="top" secondItem="iCf-at-za6" secondAttribute="bottom" id="JSk-DR-jkG"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -104,16 +110,17 @@
             </objects>
             <point key="canvasLocation" x="1910" y="786"/>
         </scene>
-        <!--直播-->
+        <!--发现-->
         <scene sceneID="pFe-rI-q2i">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Brd-HK-dTM" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="直播" image="btn_live_normal" selectedImage="btn_live_selected" id="QVr-pL-2iR"/>
+                    <tabBarItem key="tabBarItem" title="发现" image="plane-7" selectedImage="plane-7" id="QVr-pL-2iR"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Mts-Xt-vVw">
+                    <navigationBar key="navigationBar" hidden="YES" alpha="0.0" contentMode="scaleToFill" translucent="NO" id="Mts-Xt-vVw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -122,11 +129,10 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c4X-4f-Azm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="56.799999999999997" y="111.99400299850076"/>
+            <point key="canvasLocation" x="206" y="112"/>
         </scene>
     </scenes>
     <resources>
-        <image name="btn_live_normal" width="30" height="24"/>
-        <image name="btn_live_selected" width="30" height="24"/>
+        <image name="plane-7" width="30" height="30"/>
     </resources>
 </document>
