--- a/ASRoam/ASRoam/Class/Profile/Controller/Profile.storyboard
+++ b/ASRoam/ASRoam/Class/Profile/Controller/Profile.storyboard
@@ -1,18 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rWv-Lf-KQP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.17" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="rWv-Lf-KQP">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.14"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="PingFang.ttc">
+            <string>PingFangSC-Medium</string>
+            <string>PingFangSC-Regular</string>
+        </array>
+    </customFonts>
     <scenes>
-        <!--View Controller-->
+        <!--个人中心-->
         <scene sceneID="oKG-ec-Cn5">
             <objects>
-                <viewController id="LAW-BS-ocV" sceneMemberID="viewController">
+                <viewController id="LAW-BS-ocV" customClass="ProfileController" customModule="ASRoam" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="GQa-i9-tyJ"/>
                         <viewControllerLayoutGuide type="bottom" id="94k-Fu-RaN"/>
@@ -20,22 +28,132 @@
                     <view key="view" contentMode="scaleToFill" id="yWx-f8-Fj3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="116" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eoG-jT-9Fj">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="UserInfoCell" rowHeight="120" id="wnd-cl-Q6n" customClass="UserInfoCell" customModule="ASRoam" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="120"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="wnd-cl-Q6n" id="k8I-en-qQ2">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="119.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ataluer_avatar" translatesAutoresizingMaskIntoConstraints="NO" id="wIp-Qq-eCg">
+                                                    <rect key="frame" x="28" y="25" width="70" height="70"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="70" id="4mi-Ce-n9w"/>
+                                                        <constraint firstAttribute="width" constant="70" id="aew-IV-ITe"/>
+                                                        <constraint firstAttribute="width" secondItem="wIp-Qq-eCg" secondAttribute="height" multiplier="1:1" id="zSF-0N-IsA"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ataluer" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pXf-bm-5Ca">
+                                                    <rect key="frame" x="118" y="40" width="50.5" height="21"/>
+                                                    <fontDescription key="fontDescription" name="PingFangSC-Medium" family="PingFang SC" pointSize="15"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="查看个人主页" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FN7-Id-Cu6">
+                                                    <rect key="frame" x="118" y="63" width="84" height="20"/>
+                                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btn_more" translatesAutoresizingMaskIntoConstraints="NO" id="X3z-af-EEv">
+                                                    <rect key="frame" x="323" y="48" width="24" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="24" id="9AG-Lu-oIM"/>
+                                                        <constraint firstAttribute="width" secondItem="X3z-af-EEv" secondAttribute="height" multiplier="6:6" id="jNr-1v-H7P"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="wIp-Qq-eCg" firstAttribute="leading" secondItem="k8I-en-qQ2" secondAttribute="leadingMargin" constant="20" id="1NR-ma-vjp"/>
+                                                <constraint firstItem="pXf-bm-5Ca" firstAttribute="top" secondItem="wIp-Qq-eCg" secondAttribute="top" constant="15" id="3bJ-xD-Vca"/>
+                                                <constraint firstItem="X3z-af-EEv" firstAttribute="centerY" secondItem="k8I-en-qQ2" secondAttribute="centerY" id="ENs-RR-KHm"/>
+                                                <constraint firstItem="FN7-Id-Cu6" firstAttribute="top" secondItem="pXf-bm-5Ca" secondAttribute="bottom" constant="2" id="Lyx-68-aC7"/>
+                                                <constraint firstItem="pXf-bm-5Ca" firstAttribute="leading" secondItem="wIp-Qq-eCg" secondAttribute="trailing" constant="20" id="bEn-YD-eJw"/>
+                                                <constraint firstItem="wIp-Qq-eCg" firstAttribute="centerY" secondItem="k8I-en-qQ2" secondAttribute="centerY" id="djL-YN-ir0"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="X3z-af-EEv" secondAttribute="trailing" constant="20" id="kd5-5F-sX4"/>
+                                                <constraint firstItem="FN7-Id-Cu6" firstAttribute="leading" secondItem="pXf-bm-5Ca" secondAttribute="leading" id="odY-hO-Riv"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="avatarImgView" destination="wIp-Qq-eCg" id="04N-oc-wdk"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MineItemCell" rowHeight="50" id="aum-r4-VHD" customClass="MineItemCell" customModule="ASRoam" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="148" width="375" height="50"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aum-r4-VHD" id="QyY-7N-F3J">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home-7" translatesAutoresizingMaskIntoConstraints="NO" id="Whx-nk-QWU">
+                                                    <rect key="frame" x="28" y="10" width="30" height="30"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="30" id="3pF-1W-3Af"/>
+                                                        <constraint firstAttribute="height" constant="30" id="Jx3-wY-Ksu"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我关注的主题" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eqJ-Wt-Ext">
+                                                    <rect key="frame" x="73" y="15" width="84" height="20"/>
+                                                    <fontDescription key="fontDescription" name="PingFangSC-Regular" family="PingFang SC" pointSize="14"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="btn_more" translatesAutoresizingMaskIntoConstraints="NO" id="OWL-V0-tmx">
+                                                    <rect key="frame" x="323" y="13" width="24" height="24"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="24" id="hcF-cR-iqi"/>
+                                                        <constraint firstAttribute="width" secondItem="OWL-V0-tmx" secondAttribute="height" multiplier="6:6" id="k6m-PK-Xa6"/>
+                                                    </constraints>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="eqJ-Wt-Ext" firstAttribute="centerY" secondItem="Whx-nk-QWU" secondAttribute="centerY" id="J4Z-Ud-Aef"/>
+                                                <constraint firstItem="eqJ-Wt-Ext" firstAttribute="leading" secondItem="Whx-nk-QWU" secondAttribute="trailing" constant="15" id="RxH-3w-NfT"/>
+                                                <constraint firstItem="OWL-V0-tmx" firstAttribute="width" secondItem="OWL-V0-tmx" secondAttribute="height" multiplier="6:6" id="gqA-LX-BKY"/>
+                                                <constraint firstItem="Whx-nk-QWU" firstAttribute="centerY" secondItem="QyY-7N-F3J" secondAttribute="centerY" id="imP-Ix-sSL"/>
+                                                <constraint firstItem="Whx-nk-QWU" firstAttribute="leading" secondItem="QyY-7N-F3J" secondAttribute="leadingMargin" constant="20" id="jZP-G1-7Jz"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="OWL-V0-tmx" secondAttribute="trailing" constant="20" id="sfh-eX-a8q"/>
+                                                <constraint firstItem="OWL-V0-tmx" firstAttribute="centerY" secondItem="QyY-7N-F3J" secondAttribute="centerY" id="y88-O2-EQe"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="mineItemImgView" destination="Whx-nk-QWU" id="0Pl-nD-sXJ"/>
+                                            <outlet property="titleLabel" destination="eqJ-Wt-Ext" id="15q-4q-pyT"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="eoG-jT-9Fj" firstAttribute="top" secondItem="GQa-i9-tyJ" secondAttribute="bottom" id="2j1-Wb-7ky"/>
+                            <constraint firstAttribute="trailing" secondItem="eoG-jT-9Fj" secondAttribute="trailing" id="ebA-s6-Iek"/>
+                            <constraint firstItem="eoG-jT-9Fj" firstAttribute="leading" secondItem="yWx-f8-Fj3" secondAttribute="leading" id="fbh-rh-eBe"/>
+                            <constraint firstItem="94k-Fu-RaN" firstAttribute="top" secondItem="eoG-jT-9Fj" secondAttribute="bottom" id="rd5-FF-hyt"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="zMZ-zF-Zel"/>
+                    <navigationItem key="navigationItem" title="个人中心" largeTitleDisplayMode="never" id="zMZ-zF-Zel"/>
+                    <connections>
+                        <outlet property="mineTable" destination="eoG-jT-9Fj" id="SW4-Ob-SVi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MbY-yq-1n8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="996" y="1720"/>
+            <point key="canvasLocation" x="996" y="1719.4902548725638"/>
         </scene>
         <!--我的-->
         <scene sceneID="7J7-QF-FO3">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rWv-Lf-KQP" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="我的" image="btn_user_normal" selectedImage="btn_user_selected" id="HXy-yE-FRf"/>
+                    <tabBarItem key="tabBarItem" title="我的" image="layer-7" selectedImage="layer-7" id="HXy-yE-FRf"/>
                     <toolbarItems/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5nZ-P9-95Z">
+                    <navigationBar key="navigationBar" clipsSubviews="YES" contentMode="scaleToFill" id="5nZ-P9-95Z">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -50,7 +168,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="btn_user_normal" width="24" height="24"/>
-        <image name="btn_user_selected" width="24" height="24"/>
+        <image name="ataluer_avatar" width="500" height="500"/>
+        <image name="btn_more" width="8" height="14"/>
+        <image name="home-7" width="30" height="30"/>
+        <image name="layer-7" width="30" height="30"/>
     </resources>
 </document>
